# drepr-v2

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  exec_examples.sh  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/source/: api.rst  conf.py  development.rst  getting-started.rst  glossary.rst  index.rst
drepr/: __main__.py  main.py
drepr/models/: align.py  attr.py  drepr.py  path.py  prelude.py  preprocessing.py  resource.py  sm.py
drepr/models/parse_v1/: __init__.py  align_parser.py
drepr/models/parse_v2/: __init__.py  sm_parser.py
drepr/models/parsers/: interface.py
drepr/planning/: class_map_plan.py  drepr_model_alignments.py
drepr/program_generation/: alignment_fn.py  main.py  predefined_fn.py  preprocessing.py  program_space.py  writers.py
drepr/readers/: prelude.py
drepr/utils/: attr_data.py  misc.py  udf.py
drepr/writers/: prefix_index.py  rdfgraph_manual_writer.py  rdfgraph_oxigraph_writer.py  rdfgraph_writer.py
examples/: run_examples.py
examples/mineral_site/: data.json
examples/mineral_site/invalid_variable_names/: default.csv  model.yml  output.ttl
examples/mineral_site/missing_values/: default.json  model.yml  output.ttl
examples/mineral_system/missing_values/: model.yml
examples/mineral_system/misspath_autoalign/: default.json  model.yml  output.ttl
examples/pseudo_people/: model.yml  output.ttl  s01.plan.json  s01.py
examples/resource_categories/: model.yml  output.ttl
tests/: conftest.py  test_parser.py  test_planning.py  test_program_generation.py
tests/utils/: test_udf.py
(+21 files in other folders)
