[tool.poetry]
name = "drepr-v2"
version = "0.1.0"
description = ""
authors = ["Binh Vu <binh@toan2.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
orjson = "^3.9.13"
ruamel-yaml = "^0.18.6"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
autoflake = "^2.2.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
